# grimoire

./: .gitignore  .gitmodules  CATALOG.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  TODO.md  cliff.toml  dist-workspace.toml  taskfile.yml
.claude/: rules.md
.claude/agents/: worker-reviewer.md
.claude/artifacts/: adr_anchor_escape_recovery.md  adr_announce_fork.md  adr_client_compat_matrix.md  adr_description_companion.md  adr_fetch_service_extraction.md  adr_git_provenance_annotations.md  adr_grim_publish.md  adr_local_path_sources.md  adr_managed_context_block.md  adr_mcp_percall_scope_fetch_render.md  adr_multi_registry_mcp.md  adr_multifile_rules.md  adr_oci_artifact_type.md  adr_oci_empty_config_compat.md  adr_projection_over_index.md  adr_push_pull_registry_split.md  adr_registry_default_dedup.md  adr_render_layout_stability.md  adr_repository_annotation.md  adr_structured_vendor_metadata.md  adr_tool_namespaced_metadata_rendering.md  adr_unified_publish_version_cascade.md  adr_vendor_wave_expansion.md  bugfix_plan_gitlab_registry_compat.md  bugfix_plan_name_collision_guards.md  design_fetch_service_extraction.md  design_registry_tags_clients.md  design_render_scheme_versioning.md  handover_local_path_deps.md  handover_vscode_description_api.md  plan_multifile_rules.md  plan_ocx_publish.md  plan_review_fixes_local_path_sources.md  plan_tui_overhaul.md  release_notes_callouts_next.md  research_plugin_schemes.md  research_spec_kit_rendering.md  research_vendor_verification_cursor_kiro.md  research_vendor_verification_junie_gemini.md  research_vendor_verification_zed_amp.md
.claude/hooks/: post_tool_use_tracker.py  pre_commit_verification.py
.claude/rules/: arch-principles.md  docs-style.md  product-context.md  subsystem-cli-api.md  subsystem-cli-commands.md  subsystem-cli.md  subsystem-config-keys.md  subsystem-file-structure.md  subsystem-taskfiles.md  subsystem-tests.md  vendor-capability-watchlist.md  workflow-bugfix.md  workflow-git.md  workflow-refactor.md  workflow-release.md  workflow-swarm.md
.claude/tests/: test_ai_config.py  test_hooks.py
.github/workflows/: claude.yml  docs.yml  publish-catalog.yml  publish-ocx.yml  release.yml  verify-basic.yml  verify-deep.yml
catalog/: .gitignore  README.md  publish.toml  taskfile.yml
catalog/bundles/: grim-essentials.toml
catalog/descriptions/: ai-config-authoring.md  grim-authoring.md  grim-essentials.md  grim-mcp.md  grim-usage.md
catalog/mcp/: grim.toml
docs/: README.md  book.toml
docs/src/: SUMMARY.md  agents.md  artifacts.md  authentication.md  ci.md  clients.md  commands.md  concepts.md  configuration.md  installation.md  introduction.md  json-interface.md  mcp-servers.md  package-index.md  publishing.md  quickstart.md  self-hosted-gitlab.md  stability.md  vendor-metadata.md
packaging/grim/: metadata.json
src/: api.rs  app.rs  auth.rs  catalog.rs  cli.rs  command.rs  config.rs  context.rs  env.rs  error.rs  fetch.rs  glob.rs  install.rs  lock.rs  main.rs  mcp.rs  oci.rs  path_safety.rs  skill.rs  store.rs  tls.rs  tui.rs
src/api/: add_report.rs  artifact_status.rs  build_report.rs  config_report.rs  context_report.rs  describe_report.rs  fetch_report.rs  init_report.rs  install_report.rs  lock_report.rs  login_report.rs  publish_report.rs  release_report.rs  remove_report.rs  search_report.rs  status_report.rs  uninstall_report.rs  update_report.rs
src/auth/: auth_error.rs  credential.rs  login.rs  store.rs  verify.rs
src/catalog/: catalog_error.rs  catalog_service.rs  forge.rs  index_announce.rs  index_source.rs  registry_catalog.rs  search_match.rs  update_availability.rs
src/cli/: color.rs  exit_code.rs  options.rs  printer.rs  progress.rs
src/command/: add.rs  build.rs  command_error.rs  completions.rs  config.rs  config_keys.rs  context.rs  describe.rs  fetch.rs  init.rs  install.rs  lock.rs  login.rs  logout.rs  mcp.rs  publish.rs  release.rs  remove.rs  schema.rs  scope_resolution.rs  search.rs  status.rs  tui.rs  uninstall.rs  (+1 more)
taskfiles/: docs.taskfile.yml  release.taskfile.yml  schema.taskfile.yml
test/: conftest.py
(+200 files in other folders)
