[package]
name = "grimoire"
version = "0.9.1"
edition = "2024"
license = "Apache-2.0"
description = "An OCI-backed package manager for AI skills and rules"
repository = "https://github.com/grimoire-rs/grimoire"
default-run = "grim"

[[bin]]
name = "grim"
path = "src/main.rs"

[dependencies]
clap = { version = ">=4.5.57, <5", features = ["derive", "color"] }
clap_complete = "4.6.2"
anyhow = "1.0.101"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "std",
    "fmt",
    "json",
    "registry",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
schemars = "1"
serde_repr = "0.1"
serde_yaml = "0.9"
semver = "1"
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
tempfile = "3"
fs4 = "0.13"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
oci-client = { version = "0.17", default-features = false, features = ["rustls-tls"] }
# Already in-tree transitively via oci-client; used directly for the
# package-index HTTP transport (all.json). Same TLS stack (rustls).
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
# Mozilla CA roots compiled into the binary. reqwest's rustls backend hard-
# errors on an empty system trust store (minimal container / CI without
# ca-certificates); seeding these as *extra* roots takes reqwest's
# merge-with-platform path instead, so grim runs without a host trust store
# while still honoring SSL_CERT_FILE/SSL_CERT_DIR. See src/tls.rs.
webpki-root-certs = "1"
docker_credential = "1.3"
# Path containment guard for anchored install state: canonicalize both
# sides of the prefix check without `\\?\` UNC false-negatives on Windows.
# Chosen over cap-std (overkill) and soft-canonicalize (Layer-1 already
# handles absent paths).
dunce = "1"
async-trait = "0.1"
tar = "0.4"
ratatui = "0.29"
crossterm = "0.28"
base64 = "0.22"
secrecy = "0.10"
rpassword = "7"
rmcp = { version = "1.7.0", features = ["schemars", "transport-io"] }
unicode-width = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

# `grim login` writes credentials through a docker-compatible store. The
# upstream `docker_credential` crate only *reads*; the maintained fork adds
# `store_credential` / `erase_credential` / `detect_default_helper` (the
# write/erase path login/logout need). Pulled in via the
# `external/docker_credential` submodule. Only Grimoire depends on this
# crate (oci-client 0.16 does not), so the patch is self-contained.
#
# The `oci-client` fork carries the empty-system-trust-store fix: upstream's
# `Client::default()` builds a rootless `reqwest::Client::default()` that panics
# on a host with no `ca-certificates`, and `Client::try_from`'s `..Default`
# tail constructs that default even on the seeded happy path — so seeding
# `extra_root_certificates` alone (see src/tls.rs) cannot prevent the crash.
# The fork seeds the default client's roots at the single shared site. Pulled
# in via the `external/rust-oci-client` submodule (branch `ocx/integration`).
[patch.crates-io]
docker_credential = { path = "external/docker_credential" }
oci-client = { path = "external/rust-oci-client" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
# Symbols are useless in release assets (user backtraces are unsymbolized
# anyway) and only bloat the download. cargo-auditable's .dep-v0 section
# survives a symbol strip.
strip = "symbols"

[lints.rust]
# Single binary crate, but the domain modules are written library-style:
# panics must never cross a module boundary without caller consent.
# Tests are exempt (clippy's unwrap_used/expect_used skip #[cfg(test)]).
unsafe_code = "forbid"

[lints.clippy]
# Library-style discipline for the domain modules. Scoped so tests still
# use .unwrap()/.expect() freely (the restriction lints ignore test cfg).
unwrap_used = "warn"
expect_used = "warn"
